--- a/Exercicios/ex 022/fundo006.html
+++ b/Exercicios/ex 022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
 
     <style>
         body {
@@ -13,11 +13,12 @@
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,7 +31,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure sequi esse possimus praesentium minus placeat non culpa voluptatum, corporis ut itaque accusamus numquam est atque ab architecto cumque quaerat consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis tempora magnam recusandae dicta voluptatibus porro quaerat fuga quisquam odit veniam itaque magni, at esse consequatur sint consequuntur qui dignissimos amet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, qui totam labore reprehenderit est tempore nemo fugiat laudantium fugit facere? Perferendis voluptas veniam quam commodi aliquid provident reiciendis recusandae impedit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure sequi esse possimus praesentium minus placeat non culpa voluptatum, corporis ut itaque accusamus numquam est atque ab architecto cumque quaerat consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis tempora magnam recusandae dicta voluptatibus porro quaerat fuga quisquam odit veniam itaque magni, at esse consequatur sint consequuntur qui dignissimos amet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, qui totam labore reprehenderit est tempore nemo fugiat laudantium fugit facere? Perferendis voluptas veniam quam commodi aliquid provident reiciendis recusandae impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos blanditiis libero nostrum facere ut excepturi voluptatibus, quis ducimus. Vel libero sed totam fuga doloremque commodi excepturi dicta molestiae atque alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ea, doloribus nemo qui aliquam tempore sapiente quae! Aliquid inventore nulla repellendus ducimus fugiat autem dolore, quibusdam at pariatur, numquam recusandae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti libero rerum sunt eos quibusdam excepturi iste! Magni minima dolorum consectetur nam error sapiente qui eaque quasi dignissimos eligendi? Magni, consequuntur! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed repudiandae inventore aspernatur officia? Iure iste veniam accusantium itaque beatae perspiciatis modi repellendus, totam soluta vero expedita ad ipsa magni libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, ipsam. Maxime laboriosam aliquam mollitia, corporis quaerat quia dolor culpa perspiciatis cum eum numquam modi vel ducimus inventore repellendus, beatae sapiente! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem consequatur sint sapiente rerum dolorem odit enim sequi accusantium voluptatibus cupiditate earum, neque amet sit laborum suscipit rem, pariatur quas ad. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id dolores, natus consequuntur magnam quo quaerat mollitia deleniti deserunt tempore eaque doloribus molestiae exercitationem error officiis quos esse corrupti beatae quae Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio asperiores molestiae in veritatis laboriosam expedita recusandae quod itaque adipisci temporibus. Quas aut at eos accusamus incidunt. Perspiciatis mollitia consectetur eius?</p>
     </main>
 </body>
 </html>
