--- a/Exercicios/ex 023/tabela002.html
+++ b/Exercicios/ex 023/tabela002.html
@@ -17,6 +17,12 @@
             border: 1px solid black;
             padding: 10px;
         }
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgrey;
+        }
         thead, tfoot {
             background-color: gray;
         }
@@ -30,10 +36,11 @@
    <h1>Uso de Tabelas Grandes</h1>
    
    <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>ESTADO</th>
-                <th>POPULAÇÃO</th>
+                <th scope="col">ESTADO</th>
+                <th scope="col" style="width: 50px;">POPULAÇÃO</th>
             </tr>
         </thead>
         <tbody>
@@ -60,7 +67,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="col">Total de Habitantes</th>
                 <td class="num"><strong>000.000.000</strong></td>
             </tr>
         </tfoot>
