--- a/Exercicios/ex 023/tabela002.html
+++ b/Exercicios/ex 023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
@@ -25,6 +26,14 @@
         }
         thead, tfoot {
             background-color: gray;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+        tbody > tr:nth-child(odd) {
+            background-color: lightgrey;
         }
         td.num {
             text-align: right;
@@ -64,6 +73,31 @@
                 <td>Parana</td>
                 <td class="num">11.433.957</td>
             </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">00.000.000</td>
+            </tr>
+            <tr>
+                <td>Pernanbuco</td>
+                <td class="num">00.000.000</td>
+            </tr>
+            <tr>
+                <td>Ceara</td>
+                <td class="num">00.000.000</td>
+            </tr>
+            <tr>
+                <td>Para</td>
+                <td class="num">00.000.000</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">oo.ooo.ooo</td>
+            </tr>
+            <tr>
+                <td>Maranhâo</td>
+                <td class="num">00.000.ooo</td>
+
+            </tr>
         </tbody>
         <tfoot>
             <tr>
@@ -73,6 +107,14 @@
         </tfoot>
 
    </table>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis explicabo temporibus aliquam tempora dicta distinctio porro rerum vel cum impedit sed itaque facere aliquid similique, ut quae quas vitae quos?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eos impedit eligendi ab velit dicta. Soluta asperiores sint consequuntur maiores quis doloremque ullam. Nobis molestias consequuntur ad quisquam adipisci dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem consequuntur cumque reprehenderit rem corporis dolorem adipisci voluptas voluptates ratione reiciendis, optio dignissimos voluptatibus animi odio impedit doloribus magni voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, ullam animi perspiciatis laborum, veniam nam perferendis cupiditate quibusdam, labore doloremque tempore libero minima ipsa eius pariatur quae blanditiis magnam voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae, consequuntur veritatis ipsum natus est, corporis error minus vitae officiis doloribus ea odit ratione veniam sed, repellat sunt excepturi voluptatum?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis explicabo temporibus aliquam tempora dicta distinctio porro rerum vel cum impedit sed itaque facere aliquid similique, ut quae quas vitae quos?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eos impedit eligendi ab velit dicta. Soluta asperiores sint consequuntur maiores quis doloremque ullam. Nobis molestias consequuntur ad quisquam adipisci dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem consequuntur cumque reprehenderit rem corporis dolorem adipisci voluptas voluptates ratione reiciendis, optio dignissimos voluptatibus animi odio impedit doloribus magni voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, ullam animi perspiciatis laborum, veniam nam perferendis cupiditate quibusdam, labore doloremque tempore libero minima ipsa eius pariatur quae blanditiis magnam voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae, consequuntur veritatis ipsum natus est, corporis error minus vitae officiis doloribus ea odit ratione veniam sed, repellat sunt excepturi voluptatum?</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis explicabo temporibus aliquam tempora dicta distinctio porro rerum vel cum impedit sed itaque facere aliquid similique, ut quae quas vitae quos?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eos impedit eligendi ab velit dicta. Soluta asperiores sint consequuntur maiores quis doloremque ullam. Nobis molestias consequuntur ad quisquam adipisci dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem consequuntur cumque reprehenderit rem corporis dolorem adipisci voluptas voluptates ratione reiciendis, optio dignissimos voluptatibus animi odio impedit doloribus magni voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, ullam animi perspiciatis laborum, veniam nam perferendis cupiditate quibusdam, labore doloremque tempore libero minima ipsa eius pariatur quae blanditiis magnam voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae, consequuntur veritatis ipsum natus est, corporis error minus vitae officiis doloribus ea odit ratione veniam sed, repellat sunt excepturi voluptatum?</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis explicabo temporibus aliquam tempora dicta distinctio porro rerum vel cum impedit sed itaque facere aliquid similique, ut quae quas vitae quos?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eos impedit eligendi ab velit dicta. Soluta asperiores sint consequuntur maiores quis doloremque ullam. Nobis molestias consequuntur ad quisquam adipisci dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem consequuntur cumque reprehenderit rem corporis dolorem adipisci voluptas voluptates ratione reiciendis, optio dignissimos voluptatibus animi odio impedit doloribus magni voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, ullam animi perspiciatis laborum, veniam nam perferendis cupiditate quibusdam, labore doloremque tempore libero minima ipsa eius pariatur quae blanditiis magnam voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae, consequuntur veritatis ipsum natus est, corporis error minus vitae officiis doloribus ea odit ratione veniam sed, repellat sunt excepturi voluptatum?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis explicabo temporibus aliquam tempora dicta distinctio porro rerum vel cum impedit sed itaque facere aliquid similique, ut quae quas vitae quos?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eos impedit eligendi ab velit dicta. Soluta asperiores sint consequuntur maiores quis doloremque ullam. Nobis molestias consequuntur ad quisquam adipisci dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem consequuntur cumque reprehenderit rem corporis dolorem adipisci voluptas voluptates ratione reiciendis, optio dignissimos voluptatibus animi odio impedit doloribus magni voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, ullam animi perspiciatis laborum, veniam nam perferendis cupiditate quibusdam, labore doloremque tempore libero minima ipsa eius pariatur quae blanditiis magnam voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae, consequuntur veritatis ipsum natus est, corporis error minus vitae officiis doloribus ea odit ratione veniam sed, repellat sunt excepturi voluptatum?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis explicabo temporibus aliquam tempora dicta distinctio porro rerum vel cum impedit sed itaque facere aliquid similique, ut quae quas vitae quos?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil eos impedit eligendi ab velit dicta. Soluta asperiores sint consequuntur maiores quis doloremque ullam. Nobis molestias consequuntur ad quisquam adipisci dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatem consequuntur cumque reprehenderit rem corporis dolorem adipisci voluptas voluptates ratione reiciendis, optio dignissimos voluptatibus animi odio impedit doloribus magni voluptatum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, ullam animi perspiciatis laborum, veniam nam perferendis cupiditate quibusdam, labore doloremque tempore libero minima ipsa eius pariatur quae blanditiis magnam voluptatem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti recusandae, consequuntur veritatis ipsum natus est, corporis error minus vitae officiis doloribus ea odit ratione veniam sed, repellat sunt excepturi voluptatum?</p>
 
 </body>
 </html>
