--- a/Exercicios/ex 024/iframe.html
+++ b/Exercicios/ex 024/iframe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ptbr">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>TESTANDO O USO DE UM IFRAME</h1>
-    
+    <p>Acessando site do 
+        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        para aprender a programar.</p>
 </body>
 </html>
