--- a/Exercicios/ex 024/iframe.html
+++ b/Exercicios/ex 024/iframe.html
@@ -8,7 +8,10 @@
 <body>
     <h1>TESTANDO O USO DE UM IFRAME</h1>
     <p>Acessando site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
-        para aprender a programar.</p>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+            <a href="https://www.cursoemvideo.com" target="_blank">Curso em Vídeo</a>
+        </iframe>
+        para aprender a programar.
+    </p>
 </body>
 </html>
