--- a/Exercicios/ex 024/iframe003.html
+++ b/Exercicios/ex 024/iframe003.html
@@ -11,7 +11,7 @@
         iframe#tela {
             width: 95vw;
             height: 400px;
-            border: 2px solid black;
+            border: 2px solid black; 
         }
     </style>
 </head>
@@ -26,7 +26,7 @@
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quos inventore cupiditate itaque voluptates, soluta, similique accusantium ex unde, illo quam? Nesciunt nobis deleniti magni ut saepe est quibusdam culpa! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam non numquam repellat, laboriosam molestias quasi, molestiae consequuntur inventore amet ut quo. Rem nihil maxime id cupiditate nemo, quasi dolor accusamus.</p>
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma opção</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quos inventore cupiditate itaque voluptates, soluta, similique accusantium ex unde, illo quam? Nesciunt nobis deleniti magni ut saepe est quibusdam culpa! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam non numquam repellat, laboriosam molestias quasi, molestiae consequuntur inventore amet ut quo. Rem nihil maxime id cupiditate nemo, quasi dolor accusamus.</p><img src='C:\Users\franc\Documents\Estudos\html-css\Exercicios\ex 024\imagens\html5.png'>">
         <p>Infelizmente seu navegador não é compativel com isso.</p>
     </iframe>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio magni aperiam eveniet numquam maxime repudiandae, accusamus repellat quasi quo! Nulla, obcaecati tempore non molestias animi deserunt. Hic nemo vitae impedit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, ducimus consequuntur libero error maiores fugiat perferendis blanditiis at sint ipsa doloremque voluptatem ullam tempora adipisci molestias sapiente natus culpa. Illo.</p>
